# aerosol_synthesis

./: .env  .gitignore  Code notebook.ipynb  LICENSE  README.md  index.html  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
experiments/: acid_base.py  azo_coupling.py  redox.py
