[project]
name = "aerosol_chemistry"
version = "0.1.0"
description = "Accompanying code for _A framework for general-purpose chemical synthesis in the aerosol phase and its automated implementation in an open hardware platform_"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=10.4.0",
    "pyarrow>=17.0.0",
    "scikit-image>=0.25.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "tqdm>=4.66.5",
    "transformers[torch,torch-vision]>=4.44.2",
]
